04-Backends/02-Outboud-Traffic-Policy/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-vs
spec:
  hosts:
    - "*"
  gateways:
    - helloworld-gateway
  http:
    - match:
        - uri:
            exact: /helloworld
      route:
        - destination:
            host: helloworld
            port:
              number: 80
      rewrite:
        uri: "/"

    - timeout: 3s
      match:
        - uri:
            exact: "/external"
      route:
        - destination:
            host: help.websiteos.com
            port:
              number: 80
      rewrite:
        uri: "/websiteos/example_of_a_simple_html_page.htm"
      headers:
        request:
          set:
            HOST: "help.websiteos.com"
